--- a/week-6/1-use-memo/package.json
+++ b/week-6/1-use-memo/package.json
@@ -1,26 +1,23 @@
 {
-  "name": "hooks-assignments",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "1-use-memo",
+  "version": "1.0.0",
+  "description": "Minimal React setup with Vite",
+  "main": "vite.config.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.55.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
+    "@vitejs/plugin-react": "^5.0.2",
     "vite": "^7.1.4"
   }
 }
